Title: HomePage stuff
Details: have some basic styles and content for the HomePage

Issues: need to add JSON data for the game dev group

Changes to be committed:
	new file:   app/components/city.module.css
	new file:   app/components/city.tsx
	new file:   app/components/footer.tsx
	modified:   app/globals.css
	modified:   app/layout.module.css
	modified:   app/layout.tsx
	new file:   app/page.module.css
	modified:   app/page.tsx
	new file:   public/city.png
	new file:   public/neuropol.otf
	new file:   public/whitrabt.ttf

--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,5 +1,25 @@
+#navbar{
+display: flex;
+align-items: center;
+justify-content: space-between;
+background-color: var(--bg-color);
+padding: 5px;
+}
+
 .logo{
- filter: drop-shadow(0rem 0rem 5px rgb(92, 252, 0));
- height: 60px;
- width: 60px;
+ filter: drop-shadow(0rem 0rem 5px var(--text-color));
+ height: 50px;
+ width: 50px;
+ background-color: black;
+ padding: 3px;
+ border-radius: 100%;
+}
+
+.links a {
+  font-family: var(--font-detail);
+  margin: 0 10px;
+  text-shadow: 0 0 5px var(--text-color);
+  color: var(--text-color);
+  text-decoration: none;
+  font-size: small;
 }
