--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,56 @@
 
+@font-face {
+  font-family: "neuro";
+  src: url(/neuropol.otf);
+}
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: "white-rabbit";
+  src: url(/whitrabt.ttf);
+}
+
+:root {  
+  --bg-color: rgb(198, 196, 196);
+  --text-color: rgb(31, 46, 130);
+  --font-detail: 'neuro', monospace, arial;
+  --font-p: 'white-rabbit', monospace, arial;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --bg-color: black;
+    --text-color:  rgb(92, 252, 0);
+    --font-detail: 'neuro', monospace, arial;
+    --font-p: 'white-rabbit', monospace, arial;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html{
+  height: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+body{
+  margin: 0px;
+  height: 100%;
+ }
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
