--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,10 +1,11 @@
 .content{
+  height: 100%;
   display: flex;
   align-items: center;
-  
+
   flex-direction: column;
-  background: var(--bg-color); 
-  
+  background: var(--bg-color);
+
   padding:10px;
 }
 
