--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: Saucer;
+  src: url(./SaucerBB.ttf);
+}
+
+
+h1{
+  font-family: Saucer, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+}
